@@ -1,3 +1,7 @@
+2010-11-20  Gautier Portet <gautier soundconverter org>
+	* src/soundconverter.py: Make sure all child dialog have a transient.
+	 (thanks Cosimo)
+
 2010-11-03  Gautier Portet <gautier soundconverter org>
 	* src/soundconverter.py: Add Folder was broken when using Ogg Vorbis filter
 	 and trying to add .ogg files, since the extension filter contained two 
